// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation 1`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.test should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#test
   Details:
    * options.test should be an array:
      [RegExp | non-empty string, ...]
    * options.test should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.test should be an instance of RegExp.
       * options.test should be a non-empty string."
`;

exports[`validation 2`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.test should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#test
   Details:
    * options.test[0] should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.test[0] should be an instance of RegExp.
       * options.test[0] should be a non-empty string."
`;

exports[`validation 3`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.include should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#include
   Details:
    * options.include should be an array:
      [RegExp | non-empty string, ...]
    * options.include should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.include should be an instance of RegExp.
       * options.include should be a non-empty string."
`;

exports[`validation 4`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.include should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#include
   Details:
    * options.include[0] should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.include[0] should be an instance of RegExp.
       * options.include[0] should be a non-empty string."
`;

exports[`validation 5`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.exclude should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#exclude
   Details:
    * options.exclude should be an array:
      [RegExp | non-empty string, ...]
    * options.exclude should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.exclude should be an instance of RegExp.
       * options.exclude should be a non-empty string."
`;

exports[`validation 6`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.exclude should be one of these:
   [RegExp | non-empty string, ...] | RegExp | non-empty string
   -> Filtering rules.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#exclude
   Details:
    * options.exclude[0] should be one of these:
      RegExp | non-empty string
      -> Filtering rule as regex or string.
      Details:
       * options.exclude[0] should be an instance of RegExp.
       * options.exclude[0] should be a non-empty string."
`;

exports[`validation 7`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.parallel should be one of these:
   boolean | integer
   -> Use multi-process parallel running to improve the build speed.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#parallel
   Details:
    * options.parallel should be a boolean.
    * options.parallel should be an integer."
`;

exports[`validation 8`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.parallel should be one of these:
   boolean | integer
   -> Use multi-process parallel running to improve the build speed.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#parallel
   Details:
    * options.parallel should be a boolean.
    * options.parallel should be an integer."
`;

exports[`validation 9`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.minify should be an instance of function.
   -> Allows you to override default minify function.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#number"
`;

exports[`validation 10`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.terserOptions should be an object:
   object { … }
   -> Options for \`terser\` (by default) or custom \`minify\` function.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#terseroptions"
`;

exports[`validation 11`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.extractComments should be one of these:
   boolean | non-empty string | RegExp | function | object { condition?, filename?, banner? }
   -> Whether comments shall be extracted to a separate file.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#extractcomments
   Details:
    * options.extractComments.condition should be one of these:
      boolean | non-empty string | RegExp | function
      -> Condition what comments you need extract.
      -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#condition
      Details:
       * options.extractComments.condition should be a boolean.
       * options.extractComments.condition should be a non-empty string.
       * options.extractComments.condition should be an instance of RegExp.
       * options.extractComments.condition should be an instance of function."
`;

exports[`validation 12`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.extractComments should be one of these:
   boolean | non-empty string | RegExp | function | object { condition?, filename?, banner? }
   -> Whether comments shall be extracted to a separate file.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#extractcomments
   Details:
    * options.extractComments.filename should be one of these:
      non-empty string | function
      -> The file where the extracted comments will be stored. Default is to append the suffix .LICENSE.txt to the original filename.
      -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#filename
      Details:
       * options.extractComments.filename should be a non-empty string.
       * options.extractComments.filename should be an instance of function."
`;

exports[`validation 13`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.extractComments should be one of these:
   boolean | non-empty string | RegExp | function | object { condition?, filename?, banner? }
   -> Whether comments shall be extracted to a separate file.
   -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#extractcomments
   Details:
    * options.extractComments.banner should be one of these:
      boolean | non-empty string | function
      -> The banner text that points to the extracted file and will be added on top of the original file
      -> Read more at https://github.com/webpack-contrib/terser-webpack-plugin#banner
      Details:
       * options.extractComments.banner should be a boolean.
       * options.extractComments.banner should be a non-empty string.
       * options.extractComments.banner should be an instance of function."
`;

exports[`validation 14`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options.extractComments has an unknown property 'unknown'. These properties are valid:
   object { condition?, filename?, banner? }"
`;

exports[`validation 15`] = `
"Invalid options object. Terser Plugin has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { test?, include?, exclude?, terserOptions?, extractComments?, parallel?, minify? }"
`;
